<resources>
    <string name="app_name">PictureMe</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="feed">Feed</string>
    <string name="editChange">Введите текст </string>
    <string name="textExplainChange">Введите текст для изменения последнего сообщения у Кирилла Евдокимова</string>
    <string name="findPhotographer">Вызвать фотографа</string>
    <string name="openPortfolio">Открыть портфолио</string>
    <string name="rating">Рейтинг</string>
    <string name="description_photographer">Описание</string>
    <string name="photos_text">Фотографии</string>
    <string name="cost_text">Стоимость</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="username">Имя</string>
    <string name="useremail">Почта</string>
    <string name="red">Отредактировать</string>
</resources>