<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/portfolio"
    android:gravity="center"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context=".Portfolio">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                    android:id="@+id/ava"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ava"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_shape"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="12dp"
                    android:text="Кирилл Евдокимов"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintStart_toEndOf="@id/ava"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/star"
                    app:layout_constraintStart_toEndOf="@id/rating"
                    app:layout_constraintTop_toBottomOf="@id/fio" />
                <TextView
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.0"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@id/star"
                    app:layout_constraintTop_toBottomOf="@id/fio" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/rating"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/ava"
                    app:layout_constraintTop_toBottomOf="@id/fio" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/description_photographer"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rating" />

                <TextView
                android:id="@+id/person_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                android:layout_marginBottom="10dp"
                android:text="Placeholderplacegikdeplaceholder placegoledr"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />

                <TextView
                    android:id="@+id/photos_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/photos_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/person_text" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/photos_text" />

                <TextView
                    android:id="@+id/cost_text"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/cost_text"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:paddingStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewPager" />
                <TextView
                    android:id="@+id/cost"
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:text="1550₽"
                    android:layout_marginStart="8dp"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/cost_text"
                    app:layout_constraintTop_toBottomOf="@id/viewPager" />

                <Button
                    android:id="@+id/open"
                    android:layout_width="300dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_button"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/findPhotographer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias="0.9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cost" />
                        <FrameLayout
                            android:layout_width="1dp"
                            android:layout_height="12dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/open"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>